Fixed cmake by commenting out lapackpp requirement. Still need to fix cpp functions to use correct name space and eventually add lapackpp

--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -5,17 +5,17 @@ project(benchmark)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-message(STATUS "Checking for hqrrp ... ")
+message(STATUS "Checking for RandBLAS ... ")
 find_package(RandBLAS REQUIRED)
-message(STATUS "Done checking for hqrrp. ...")
+message(STATUS "Done checking for RandBLAS. ...")
 
 message(STATUS "Looking for BLAS++ ... ")
 find_package(blaspp REQUIRED)
 message(STATUS "Done looking for BLAS++.")
 
-message(STATUS "Looking for LAPACK++ ...")
-find_package(lapackpp REQUIRED)
-message(STATUS "Done looking for LAPACK++.")
+##message(STATUS "Looking for LAPACK++ ...")
+##find_package(lapackpp REQUIRED)
+##message(STATUS "Done looking for LAPACK++.")
 
 
 set(
@@ -29,7 +29,7 @@ target_include_directories(
     bench_three_qr_algs PUBLIC ${Random123_DIR}
 )
 target_link_libraries(
-     bench_three_qr_algs PUBLIC hqrrp blaspp lapackpp
+    bench_three_qr_algs PUBLIC RandBLAS blaspp lapackpp
 )
 
 
@@ -44,5 +44,5 @@ target_include_directories(
     bench_blocksizes PUBLIC ${Random123_DIR}
 )
 target_link_libraries(
-    bench_blocksizes PUBLIC hqrrp blaspp lapackpp
+    bench_blocksizes PUBLIC RandBLAS blaspp lapackpp
 )
